// Produced by Acceleo JavaScript Generator 1.1.2
package cop1.protobuf;

enum DecoderType {
  A = 1;
  B = 2;
}
