// Produced by Acceleo JavaScript Generator 1.1.0
import "ccsds_mal/types.proto";

import "cop1/DecoderType.proto";
import "cop1/ModeType.proto";

package cop1.protobuf;

message COP1Status {
extensions 23 to 123;

  optional cop1.protobuf.ModeType mode = 1;
  optional cop1.protobuf.DecoderType decoder = 2;
  optional ccsds_mal.protobuf.UOCTET state = 3;
  optional ccsds_mal.protobuf.UOCTET lockout_flag = 4;
  optional ccsds_mal.protobuf.UOCTET wait_flag = 5;
  optional ccsds_mal.protobuf.UOCTET synchro_flag = 6;
  optional ccsds_mal.protobuf.UOCTET RF_flag = 7;
  optional ccsds_mal.protobuf.UINTEGER retransmit_flag = 8;
  optional ccsds_mal.protobuf.UINTEGER FarmB_counter = 9;
  optional ccsds_mal.protobuf.UINTEGER event = 10;
  optional ccsds_mal.protobuf.UINTEGER CLCW = 11;
  optional ccsds_mal.protobuf.UINTEGER V_S = 12;
  optional ccsds_mal.protobuf.UINTEGER V_R = 13;
  optional ccsds_mal.protobuf.UINTEGER N_R = 14;
  optional ccsds_mal.protobuf.INTEGER NN_R = 15;
  optional ccsds_mal.protobuf.UINTEGER num_frame = 16;
  optional cop1.protobuf.ModeType type_frame = 17;
  optional ccsds_mal.protobuf.UINTEGER nb_accepted_frames = 18;
  optional ccsds_mal.protobuf.UINTEGER nb_confirmed_frames = 19;
  optional ccsds_mal.protobuf.UINTEGER nb_rejected_frames = 20;
  optional ccsds_mal.protobuf.UOCTET variable_display = 21;
  optional ccsds_mal.protobuf.UOCTET frame_display = 22;
}
